# PythonProjectH

./: .gitignore  README.md  env.example  main.py  open_file_names.py  pyproject.toml
data/: operations.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  read_csv_excel.py  search.py  utils.py  widget.py
src/log/: mylog.txt
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_read_csv_excel.py  test_search.py  test_utils.py  test_widget.py
tests/htmlcov/: index.html
